Moved code to java from scala