@@ -7,7 +7,6 @@
  * user guide available at https://docs.gradle.org/2.11/userguide/tutorial_java_projects.html
  */
 
-// Apply the java plugin to add support for Java
 
 allprojects {
     apply plugin: 'java'
@@ -16,6 +15,8 @@ allprojects {
     apply plugin: 'maven'
     apply plugin: 'signing'
     apply plugin: 'checkstyle'
+
+
 
     checkstyle {
         toolVersion = "7.1"
@@ -45,8 +46,7 @@ allprojects {
         compile 'org.slf4j:slf4j-api:1.7.14'
         compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
         compile group: 'ch.qos.logback', name: 'logback-core', version: '1.1.7'
-        compile 'org.scala-lang:scala-library:2.11.7'
-        
+
         // https://mvnrepository.com/artifact/com.101tec/zkclient
         compile group: 'com.101tec', name: 'zkclient', version: '0.3'
 
@@ -66,6 +66,7 @@ allprojects {
     }
 
 }
+
 
 def pkgs = ['common', 'clients:streming', 'service:server', 'integrationtests']
 
@@ -196,13 +197,42 @@ project('benchmark') {
     }
 }
 
-
 project('cluster') {
+    apply plugin: 'scala'
     dependencies {
+        compile 'org.scala-lang:scala-library:2.11.7'
+        testCompile 'org.scalatest:scalatest_2.11:3.0.0'
         compile project(':zkutils')
     }
 }
 
 project('zkutils') {
+    apply plugin: 'scala'
+    dependencies {
+        compile 'org.scala-lang:scala-library:2.11.7'
+        testCompile 'org.scalatest:scalatest_2.11:3.0.0'
+    }
 
 }
+
+tasks.withType(ScalaCompile) {
+    scalaCompileOptions.useAnt = false
+
+    scalaCompileOptions.additionalParameters = [
+            "-deprecation",
+            "-unchecked",
+            "-encoding", "utf8",
+            "-target:jvm-${sourceCompatibility}".toString(),
+            "-Xlog-reflective-calls",
+            "-feature",
+            "-language:postfixOps",
+            "-language:implicitConversions",
+            "-language:existentials"
+    ]
+
+    configure(scalaCompileOptions.forkOptions) {
+        memoryMaximumSize = '1g'
+        jvmArgs = ['-XX:MaxPermSize=512m', '-Xss2m']
+    }
+}
+
